# edl-to-archive

./: .gitignore  EDL to Archive.spec  README.md  RELEASE_INSTRUCTIONS.md  exclude.txt  gui.py  main.py  pseudocode.txt  pyproject.toml  run.bat  run.sh
.claude/: settings.local.json
.github/workflows/: build.yml
examples/: DEF.csv
input/: Archieflijst TL Reinier Kooiman Belastingen 1.xlsx  EDL.csv  SOURCE.csv  TKV_R.KOOIMAN_ARCHIEF_modified.csv  TKV_R.KOOIMAN_MUZIEK_modified.csv  ~$Archieflijst TL Reinier Kooiman Belastingen 1.xlsx
src/: __init__.py  config.py  converter.py  exclusion.py  models.py  timecode.py  updater.py
