[project]
name = "edl-to-archive"
version = "0.3"
description = "Simple software to convert EDL files and source lists to a definitive list of used sources."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "customtkinter>=5.2.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "xlsxwriter>=3.2.0",
]

